# poppusher

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  caching_etc.md  cli_usage.md  deploy.sh  design_goals.md  downloader.py  england.py  flow-diagram.md  mkdocs.yml  noxfile.py  output_spec.md  package-lock.json  package.json  pyproject.toml  requirements-non-foss.txt  requirements.txt  setup.cfg_old  setup.py  setup.py_old  uk.py  uk.sh  usage.md  workspace.yml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  docs.yml
census/: Cargo.toml
clip_census/: Cargo.toml
docs/: conf.py  index.md  new_country.md  output_structure.md
notebooks/: explore.ipynb
popgetter/: __init__.py  utils.py
popgetter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
popgetter_tests/: be.py  uk.py
previous_code/: Cargo.toml  belgium.py  previous_code_usage.md  previous_readme.md  requirements.txt
previous_code/src/: lib.rs  main.rs  uk.rs
previous_code/us/demo_app/.svelte-kit/: ambient.d.ts
previous_code/us/demo_app/.svelte-kit/types/: route_meta_data.json
previous_code/us/demo_app/.svelte-kit/types/src/routes/api/census/: $types.d.ts
singapore/: data_sources.md  population_by_age_gender.py
src/: getter.rs  lib.rs  main.rs  ni.rs  uk.rs
tests/: test_be.py  test_bel.py  test_cloud_outputs.py  test_compiled.py  test_demo_for_tech_talk.py  test_metadata.py  test_package.py  test_uk.py  test_utils.py
uk/: scotland.py
us/: package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
(+99 files in other folders)
