[package]
name = "popgetter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
fs-err = "2.9.0"
geo = "0.24.0"
geo-types = "0.7.9"
geojson = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
topojson = { git = "https://github.com/dabreegster/topojson", branch = "update" }
