[package]
name = "popgetter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
fs-err = "2.11.0"
geo = "0.27.0"
geo-types = "0.7.12"
geojson = "0.24.1"
polars = "0.35.4"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.8.1"
tokio = {version = "1.34.0", features = ["full"]}
topojson = { git = "https://github.com/dabreegster/topojson", branch = "log_warning" }
zip = "0.6.6"
